--- a/projects/index.html
+++ b/projects/index.html
@@ -18,7 +18,9 @@
           Você também pode dar uma descrição para cada tarefa.
         </p>
         <p>
-          <a href="https://tasks-do-barrao.netlify.app/" target="_blank"
+          <a
+            href="https://to-do-list-react-eight-blond.vercel.app/"
+            target="_blank"
             >Ver!</a
           >
         </p>
@@ -31,19 +33,7 @@
           do Senai
         </p>
         <p>
-          <a href="https://tasks-do-barrao.netlify.app/" target="_blank"
-            >Ver!</a
-          >
-        </p>
-      </div>
-
-      <div class="project">
-        <h2>Busca CEP</h2>
-        <p>Insira um cep válido.</p>
-        <p>
-          <a href="https://busca-cep-do-barrao.netlify.app/" target="_blank"
-            >Ver!</a
-          >
+          <a href="https://ava-clone.netlify.app/" target="_blank">Ver!</a>
         </p>
       </div>
 
@@ -54,7 +44,19 @@
           DATABASE (TMDB).
         </p>
         <p>
-          <a href="https://passwordgeneratorrrrr.netlify.app/" target="_blank"
+          <a
+            href="https://react-movie-database-hazel.vercel.app/"
+            target="_blank"
+            >Ver!</a
+          >
+        </p>
+      </div>
+
+      <div class="project">
+        <h2>Busca CEP</h2>
+        <p>Insira um cep válido.</p>
+        <p>
+          <a href="https://busca-cep-do-barrao.netlify.app/" target="_blank"
             >Ver!</a
           >
         </p>
