--- a/projects/index.html
+++ b/projects/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,61 +8,42 @@
     <title>Barrinho Projects</title>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <h1>Meus Projetos</h1>
 
-      <div class="project">
-        <h2>Gerenciador de Tarefas:</h2>
-        <p>
-          Um gerenciador de tarefas onde você pode adicionar e remover tarefas.
-          Você também pode dar uma descrição para cada tarefa.
-        </p>
-        <p>
-          <a
-            href="https://to-do-list-react-eight-blond.vercel.app/"
-            target="_blank"
-            >Ver!</a
-          >
-        </p>
-      </div>
+      <section class="project">
+        <h2>Gerenciador de Tarefas</h2>
+        <p>Adicione, remova e descreva tarefas de forma simples.</p>
+        <a
+          href="https://to-do-list-react-eight-blond.vercel.app/"
+          target="_blank"
+          >Ver Projeto</a
+        >
+      </section>
 
-      <div class="project">
+      <section class="project">
         <h2>Clone AVA</h2>
-        <p>
-          Um clone da página inicial do ambiente virtual de aprendizagem (AVA)
-          do Senai
-        </p>
-        <p>
-          <a href="https://ava-clone.netlify.app/" target="_blank">Ver!</a>
-        </p>
-      </div>
+        <p>Clone da página inicial do AVA do Senai.</p>
+        <a href="https://ava-clone.netlify.app/" target="_blank">Ver Projeto</a>
+      </section>
 
-      <div class="project">
-        <h2>Página de filmes:</h2>
-        <p>
-          Uma página que carrega filmes com a chamada de uma API, THE MOVIE
-          DATABASE (TMDB).
-        </p>
-        <p>
-          <a
-            href="https://react-movie-database-hazel.vercel.app/"
-            target="_blank"
-            >Ver!</a
-          >
-        </p>
-      </div>
+      <section class="project">
+        <h2>Página de Filmes</h2>
+        <p>Filmes carregados via API do The Movie Database (TMDB).</p>
+        <a href="https://react-movie-database-hazel.vercel.app/" target="_blank"
+          >Ver Projeto</a
+        >
+      </section>
 
-      <div class="project">
+      <section class="project">
         <h2>Busca CEP</h2>
-        <p>Insira um cep válido.</p>
-        <p>
-          <a href="https://busca-cep-do-barrao.netlify.app/" target="_blank"
-            >Ver!</a
-          >
-        </p>
-      </div>
+        <p>Digite um CEP válido e veja as informações.</p>
+        <a href="https://busca-cep-do-barrao.netlify.app/" target="_blank"
+          >Ver Projeto</a
+        >
+      </section>
 
-      <h1>Mais em breve</h1>
-    </div>
+      <h2 class="soon">Mais projetos em breve...</h2>
+    </main>
   </body>
 </html>
