Adicionando mais um projeto

--- a/projects/index.html
+++ b/projects/index.html
@@ -43,6 +43,12 @@
         >
       </section>
 
+      <section class="project">
+        <h2>Sistema Bancário</h2>
+        <p>Um simples sistema bancário feito com js.</p>
+        <a href="https://banksenai.netlify.app/" target="_blank">Ver Projeto</a>
+      </section>
+
       <h2 class="soon">Mais projetos em breve...</h2>
     </main>
   </body>
