--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main class="container">
-      <h1>Meus Projetos</h1>
+      <h1>Projetos Christian</h1>
 
       <section class="project">
         <h2>Gerenciador de Tarefas</h2>
